Adapt to java 11